# newstui

./: README.md  pyproject.toml  requirements.txt  temp_config.json
config/news/: themes.json
config/news/themes/: adwaita-dark.css  adwaita-light.css  dracula.css  nord.css  osaka-jade.css  rosepine.css
src/: news.py
src/config/news/: config.json
src/news_tui/: app.css  app.py  cache.py  config.py  datamodels.py  default_themes.py  fetcher.py  main.py  messages.py  screens.py  source_manager.py  theme_definitions.py  themes.py  widgets.py
src/news_tui/packaged_themes/: adwaita-dark.css  adwaita-light.css  amateur.css  dracula.css  green_mono.css  hacker.css  nord.css  orange_mono.css  osaka-jade.css  rosepine.css
src/news_tui/sources/: base.py  cbc.py  manager.py  rss.py
src/news_tui/themes/: dracula.css  nord.css
src/tests/: test_fetcher.py  test_rss.py  test_themes.py
