[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-tui"
version = "0.1.0"
description = "A simple TUI news reader for the terminal."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "textual",
    "requests",
    "beautifulsoup4",
    "lxml",
    "urllib3",
]

[project.scripts]
newstui = "news_tui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"news_tui" = ["app.css", "themes/*.css"]
